[package]
name = "mathtools"
version = "0.1.0"
edition = "2024"
authors = ["Will McCallion wcmccallion@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A simple and fast 2D/3D/4D math library for graphics and games."
repository = "https://github.com/willmccallion/vecmath"
readme = "README.md"
keywords = ["math", "vector", "matrix", "linear-algebra", "gamedev"]
categories = ["mathematics", "game-development", "graphics"]
exclude = [
    ".gitignore",
]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
serde = { version = "1.0", optional = true, default-features = false, features=["derive"]}
libm = "0.2"

[features]
default = []
std = ["num-traits/std", "serde/std"]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0"
criterion = { version = "0.4", features = ["html_reports"] }
glam = "0.24"

[[bench]]
name = "my_benches"
harness = false

